[package]
name = "pyo3-pylogger"
version = "0.3.0"
edition = "2021"
authors = ["Dylan Bobby Storey <dylan.storey@gmail.com>"]
description = "Enables `log` for pyo3 based Rust applications using the `logging` modules."
publish = ["crates-io"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dylanbstorey/pyo3-pylogger"
repository = "https://github.com/dylanbstorey/pyo3-pylogger"
documentation = "https://github.com/dylanbstorey/pyo3-pylogger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = ">=0.23" }
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }
tracing-core = { version = "0.1", optional = true }
phf = { version = "0.11", features = ["macros"] , optional = true }

serde_json = { version = "1.0.140", optional = true }
serde-pyobject = { version = "0.6.0", optional = true }

[features]
default = ["tracing", "tracing-kv"]

# Base features
tracing = ["dep:tracing", "dep:tracing-core"]
log = ["dep:log"]

# KV support that works with either logging implementation
kv = ["dep:phf"]
log-kv = ["log", "kv", "log/kv"]
tracing-kv = ["tracing", "kv",  "pyo3/serde", "dep:serde_json", "dep:serde-pyobject"]
