[package]
name = "pyo3-pylogger"
version = "0.3.0"
edition = "2021"
authors = ["Dylan Bobby Storey <dylan.storey@gmail.com>"]
description = "Enables `log` for pyo3 based Rust applications using the `logging` modules."
publish = ["crates-io"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/dylanbstorey/pyo3-pylogger"
repository = "https://github.com/dylanbstorey/pyo3-pylogger"
documentation = "https://github.com/dylanbstorey/pyo3-pylogger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = ">=0.23" }
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }
tracing-core = { version = "0.1", optional = true }
phf = { version = "0.11", features = ["macros"] , optional = true }

serde_json = { version = "1.0.140", optional = true }

# serde-pyobject currently has too strict of a version constraint which makes it incompatible with our library.
# We are waiting on a PR to be merged which will fix this.
#
# https://github.com/Jij-Inc/serde-pyobject/pull/21
#
# Additionally, I have 2 other PRs open which will add additional features such as support for Pydantic BaseModels, dataclasses, and more.
#
# https://github.com/Jij-Inc/serde-pyobject/pull/22
# https://github.com/Jij-Inc/serde-pyobject/pull/23
serde-pyobject = { git = "https://github.com/LockedThread/serde-pyobject", branch = "feat/loosen-deps", optional = true }


[features]
default = ["log"]

# Base features
tracing = ["dep:tracing", "dep:tracing-core"]
log = ["dep:log"]

# KV support that works with either logging implementation
kv-common = ["dep:phf"]
kv = ["log", "kv-common", "log/kv"]
tracing-kv = ["tracing", "kv-common",  "pyo3/serde", "dep:serde_json", "dep:serde-pyobject"]
